# MultiAIAgents

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/backend/: api.py
app/config/: config.py
app/core/: ai_agent.py
app/frontend/: ui.py
